# swagger.json
@@ -14,12 +14,17 @@
             "name": "diagnostics",
             "description": "Validate the API is up and running"
         },{
+            "name": "calendars",
+            "description": "Analytics on all calendars"
+        },{
             "name": "fitness",
             "description": "Analytics on my fitness calendar"
-        },
-        {
+        },{
             "name": "family-friends",
             "description": "Analytics on my family/friends calendar"
+        },{
+            "name": "consulting",
+            "description": "Analytics on my consulting calendar"
         }
     ],
     "externalDocs": {
@@ -27,6 +32,30 @@
         "url": "https://github.com/azizj1/google-calendar-analytics"
     },
     "paths": {
+        "/calendars/summary": {
+            "get": {
+                "tags": [
+                    "calendars"
+                ],
+                "summary": "Get a breakdown by week and month for the past 3 months",
+                "description": "",
+                "operationId": "getSummary",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/BjjStats"
+                        }
+                    }
+                }
+            }
+        },
         "/calendars/fitness/bjj": {
             "get": {
                 "tags": [
@@ -72,6 +101,42 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/BjjClassRaw"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/calendars/consulting": {
+            "get": {
+                "tags": [
+                    "consulting"
+                ],
+                "summary": "Search consulting calendar",
+                "description": "",
+                "operationId": "getBjjRaw",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [{
+                    "in": "query",
+                    "name": "q",
+                    "required": true,
+                    "schema": {
+                        "type": "string"
+                    },
+                    "description": "Query to search by"
+                }],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ConsultingSearch"
                             }
                         }
                     }
@@ -284,6 +349,26 @@
                 }
             }
         },
+        "ConsultingSearch": {
+            "type": "object",
+            "properties": {
+                "aggregate": {
+                    "type": "object",
+                    "properties": {
+                        "totalHours": {
+                            "type": "number",
+                            "format": "double"
+                        }
+                    }
+                },
+                "events": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/CalendarEvent"
+                    }
+                }
+            }
+        },
         "BjjClassDateTimeRaw": {
             "type": "object",
             "properties": {
@@ -388,6 +473,35 @@
                         "Advanced",
                         "Unknown"
                     ]
+                }
+            }
+        },
+        "CalendarEvent": {
+            "type": "object",
+            "properties": {
+                "title": {
+                    "type": "string"
+                },
+                "notes": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "start": {
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "end": {
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "durationHours": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "isAllDay": {
+                    "type": "boolean"
                 }
             }
         }
